# datastore-api

./: .flake8  .gitignore  Dockerfile  README.md  config.yaml  config.yaml.example  docker-compose.yaml  noxfile.py  pyproject.toml  pytest.ini  pytest.ini.docker
.github/: requirements.txt
.github/workflows/: ci.yaml
datastore_api/: auth.py  config.py  fts3_client.py  icat_client.py  investigation_archiver.py  lifespan.py  main.py  s3_client.py  state_controller.py  state_counter.py  transfer_controller.py  utils.py
datastore_api/clients/: fts3_client.py  icat_client.py  s3_client.py  x_root_d_client.py
datastore_api/controllers/: bucket_controller.py  investigation_archiver.py  state_controller.py  state_counter.py  transfer_controller.py
datastore_api/models/: archive.py  dataset.py  icat.py  job.py  login.py  restore.py  status.py  transfer.py  version.py
datastore_api/scripts/: datastore.py  example.yaml  facilityCycle.yaml  instrument.yaml
datastore_api/scripts/metadata/epac/: archive_request.json  example.yaml  restore_request.json
datastore_api/scripts/metadata/generic/: archive_request.json  example.yaml
docs/: example.md  fts.md
tests/: docker-compose.yaml  fixtures.py
tests/integration/: test_main.py  test_main_integration.py
tests/unit/: fixtures.py  test_auth.py  test_config.py  test_fts3_client.py  test_icat_client.py  test_investigation_archiver.py  test_lifespan.py  test_main.py  test_s3_client.py  test_state_controller.py  test_state_counter.py  test_utils.py
tests/unit/clients/: test_fts3_client.py  test_icat_client.py  test_s3_client.py  test_x_root_d_client.py
tests/unit/controllers/: test_bucket_controller.py  test_investigation_archiver.py  test_state_controller.py  test_state_counter.py  test_transfer_controller.py
tests/unit/models/: test_archive.py  test_restore.py  test_transfer.py
